--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container-fluid px-4 pt-5 my-5 text-center border-bottom" id="aboutus">
       <h1 class="display-4 fw-bold text-body-emphasis">About Us</h1>
       <div class="col-lg mx-auto">
-        <p class="lead text-light">
+        <p class="lead">
           I'm <strong>Sriram Nishanth T</strong>, a passionate Full Stack Web Developer specializing in both frontend and backend development.
           On the frontend, I build modern, responsive, and interactive user interfaces using HTML, CSS, JavaScript, Bootstrap, and EJS. My focus is on creating clean and accessible designs that offer seamless user experiences.
           On the backend, I develop robust server-side applications using Node.js and Express.js, with PostgreSQL for efficient data management. I implement RESTful APIs, CRUD operations, and integrate third-party services with tools like Axios and Postman.
@@ -140,13 +140,11 @@
   <section>
     <footer class="py-3">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Pricing</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+        <li class="nav-item"><a href="#home" class="nav-link px-2 text-body-secondary">Home</a></li>
+        <li class="nav-item"><a href="#skills-icon" class="nav-link px-2 text-body-secondary">Skills</a></li>
+        <li class="nav-item"><a href="#aboutus" class="nav-link px-2 text-body-secondary">About</a></li>
       </ul>
-      <p class="text-center text-body-secondary">© 2025 Company, Inc</p>
+      <p class="text-center text-body-secondary">© 2025 Sriram Nishanth2003@gmail.com</p>
     </footer>
   </section>
     
