--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <li class="nav-item"><a href="#skills-icon" class="nav-link px-2 text-body-secondary">Skills</a></li>
         <li class="nav-item"><a href="#aboutus" class="nav-link px-2 text-body-secondary">About</a></li>
       </ul>
-      <p class="text-center text-body-secondary">© 2025 Sriram Nishanth2003@gmail.com</p>
+      <p class="text-center text-body-secondary">© 2025 sriramnishanth2003@gmail.com</p>
     </footer>
   </section>
     
